[gd_scene load_steps=5 format=2]

[ext_resource path="res://content/fonts/HeaderFont.font" type="BitmapFont" id=1]
[ext_resource path="res://content/textures/MainMenu/MainMenuPlank03.png" type="Texture" id=2]
[ext_resource path="res://menu-screens/MainMenuButton.gd" type="Script" id=3]
[ext_resource path="res://content/audio/MenuMove.wav" type="AudioStream" id=4]

[node name="MainMenuButton" type="TextureButton"]
texture_normal = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.231373, 0.0705882, 0.0235294, 1 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -12.0
[connection signal="focus_entered" from="." to="." method="_on_MainMenuButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_MainMenuButton_focus_exited"]
[connection signal="focus_entered" from="Label" to="." method="_on_Label_focus_entered"]
